Backend/kubernetes/m-content-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m-content-deployment
  labels:
    app: m-content
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m-content
  template:
    metadata:
      labels:
        app: m-content
    spec:
      containers:
      - name: m-content
        image: #IMAGEN SUBIDA EN DOCKERHUB DE M_CONTENT
        volumeMounts:
        - name: bucketKey
          mountPath: "/etc"
          readOnly: true
        ports:
        - containerPort: 3001
      volumes:
      - name: bucketKey
        secret:
          secretName: backend-google-secret
          items:
          - key: GOOGLE_KEYFILE_BUCKET
