Backend/kubernetes/m-content-service.yml
apiVersion: v1
kind: Service
metadata:
  name: m-content-service
spec:
  type: NodePort
  selector:
    app: m-content-deployment
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      NodePort: 30001
