Backend/kubernetes/m-users-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m-users-deployment
  labels:
    app: m-users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m-users
  template:
    metadata:
      labels:
        app: m-users
    spec:
      containers:
      - name: m-users
        image: carloosbaquero/backend-free-space-users:v2
        volumeMounts:
        - name: bucketkey
          mountPath: "/app/etc"
          readOnly: true
        ports:
        - containerPort: 3002
      volumes:
      - name: bucketkey
        secret:
          secretName: backend-google-secret
          items:
          - key: GOOGLE_KEYFILE_BUCKET
            path: "google-bucket"
---
apiVersion: v1
kind: Service
metadata:
  name: m-users-service
spec:
  selector:
    app: m-users-deployment
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
