Backend/kubernetes/m-users-service.yml
apiVersion: v1
kind: Service
metadata:
  name: m-users-service
spec:
  selector:
    app: m-users-deployment
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
